welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:48: error: not found: value platDeBande
  platDeBande()
  ^FlowerCase:50: error: not found: value platDeBande
  platDeBande()
  ^